objects/Workdocs_Connection__c/Workdocs_Connection__c.object-meta.xml
<CustomObject>
    <label>Workdocs Connection</label>
    <nameField>
        <displayFormat>WDC-{00000}</displayFormat>
        <label>Workdocs Connection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workdocs Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>