objects/Workdocs_Connection__c/fields/Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Code__c</fullName>
    <label>Authorization Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>