objects/Workdocs_Connection__c/fields/WD_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>WD_Org_Id__c</fullName>
    <label>WD Org Id</label>
    <type>TextArea</type>
</CustomField>