objects/Workdocs_Connection__c/fields/Workdocs_UserId__c.field-meta.xml
<CustomField>
    <fullName>Workdocs_UserId__c</fullName>
    <label>Workdocs UserId</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>